--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -5,8 +5,6 @@ footer {
 
     .container {
         display: grid;
-        grid-template-columns: 50% 50%;
-        max-width: 50rem;
         padding: 10px;
     }
 
@@ -20,7 +18,7 @@ footer {
     }
 
     .copyright {
-        text-align: left;
+        text-align: center;
     }
 }
 
