--- a/src/components/PostsListing.module.scss
+++ b/src/components/PostsListing.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     margin: 0 auto;
     flex-wrap: wrap;
+    justify-content: center;
 
     .article-container {
         padding: 10px;
@@ -67,13 +68,13 @@
     
                 .title{
                     color: rgb(177,186,159);
-                    font-size: 1.1rem;
+                    font-size: 1.2rem;
                 }
     
                 .meta {
                     margin-top: -15px;
                     margin-bottom: 20px;
-                    font-size: 0.7rem;
+                    font-size: 0.9rem;
                     font-weight: 400;
                 }
             }
@@ -104,13 +105,13 @@
     
                 .title{
                     color: rgb(177,186,159);
-                    font-size: 1.1rem;
+                    font-size: 1.4rem;
                 }
     
                 .meta {
                     margin-top: -15px;
                     margin-bottom: 20px;
-                    font-size: 0.7rem;
+                    font-size: 1rem;
                     font-weight: 400;
                 }
             }
